--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "mini-css-extract-plugin": "^1.3.5",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-sass": "^5.0.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "postcss-loader": "^5.0.0",
     "pug": "^3.0.0",
     "sass-loader": "^11.0.0",
