--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
@@ -26,6 +27,7 @@
     "multer": "^1.4.2",
     "node-sass": "^5.0.0",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "postcss-loader": "^5.0.0",
