--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "passport-naver": "^1.0.6",
     "postcss-loader": "^5.0.0",
     "pug": "^3.0.0",
     "sass-loader": "^11.0.0",
