--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "autoprefixer": "^10.2.4",
+    "aws-sdk": "^2.858.0",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
@@ -21,11 +22,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "get-blob-duration": "^1.1.2",
     "helmet": "^4.4.1",
     "mini-css-extract-plugin": "^1.3.5",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^5.0.0",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
